helm/vault/external-mongodb.yaml
kind: Service
apiVersion: v1
metadata:
  name: mongodb-svc
spec:
  type: ExternalName
  externalName:  mymongo-svc.mytest.svc.cluster.local
  ports:
  - port: 27017
